[package]
name = "bitcoinaddress"
version = "0.1.0"
authors = ["psyto <saito.hiroyuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.17.2", features = ["rand", "serde"] }
bitcoin_hashes = "0.7.6"
hex = "0.4.2"
bs58 = "0.3.1"
